<resources>
    <string name="app_name">PokemonApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="give_me_overlay_permission">GIVE ME OVERLAY PERMISSION!</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="pokemon_height">Pokemon Height:</string>
    <string name="pokemon_weight">Pokemon Weight:</string>
    <string name="pokemon_name">Pokemon Name:</string>
    <string name="start_overlay">Start Overlay</string>
</resources>